<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_header_bg"
    android:minHeight="@dimen/header_height" >

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/devicecenter_title"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/header_btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/min_margin_cutoff"
        android:background="#00000000"
        android:minWidth="50dp"
        android:text="@string/header_guide"
        android:textColor="@drawable/header_button_style"
        android:textSize="20sp" />

    <Button
        android:id="@+id/header_btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/min_margin_cutoff"
        android:background="#00000000"
        android:minWidth="50dp"
        android:text="@string/header_add"
        android:textColor="@drawable/header_button_style"
        android:textSize="20sp" />

</RelativeLayout>